# qubes-fwupd

./: .gitignore  .gitlab-ci.yml  .qubesbuilder  0001-qubes-change-symlink-to-be-relative-and-move-to-bin.patch  0001-qubes-change-symlink-to-be-relative.patch  0001-qubes-fix-vendor-check-and-make-it-optional.patch  0001-qubes-make-fwupdmgr-get-updates-think-it-s-interacti.patch  0002-qubes-make-fwupdmgr-get-updates-think-it-s-interacti.patch  0003-qubes-Drop-custom-vendor-and-version-check.patch  0004-qubes-Make-vendor-check-case-insensitive.patch  0004-qubes-do-not-use-deprecated-imp-module-in-tests.patch  0005-qubes-fix-checking-for-whonix-in-tests.patch  0006-Only-support-JCat-for-verification-of-metadata-and-f.patch  0006-qubes-don-t-fail-on-duplicate-filenames-in-jcat-file.patch  0008-qubes-treat-remote-Enabled-field-as-a-JSON-boolean.patch  0009-qubes-use-Locations-0-field-of-update-instead-of-Uri.patch  0010-qubes-tests-fix-metadata-signature-timestamp-skew.patch  Makefile  Makefile.builder  debian  fwupd.spec.in  hughsie.pub  meson.build
debian-pkg/debian/: changelog  control  fwupd-qubes-vm.install  not-installed  rules
debian-pkg/debian/patches/: 0001-contrib-change-symlink-to-be-relative.patch  series
